# ImComSim

./: README.md  Utility36.py  Zernike36.py  debye_diffraction_integral.py  execution_time.txt  fast_simulation.py  galvo_scanning_sim.py  hot_pixel_remover.py  main.py  mie_scattering_simulation.py  monalisa_simulation.py  nlsim2d_effective_OTF.tif  nlsim2d_effective_otf.tif  nlsim2d_final_image.tif  nlsim_compss.py  nlsim_reconstruction_2d.py  nlsim_simulation.py  nlsim_simulation_2d.py  noise_generator.py  photophysics_simulator.py  polarization_camera_simulator.py  polarization_imaging_sim.py  psf_generator.py  pupil_wavefront_modulator.py  pyproject.toml  sim.py  sim2d_effective_OTF.tif  sim2d_simulation_data.tif  sim_reconstrution_3d.py  sim_simulation.py  test.py  two_beam_interference.py  two_beam_interferences.py  vectorical_focusing.py  zernike_polynomials.py
adaptive_optics/: angular_decomposition.py  image_metrics.py  scattering_simulation.py  sensorless_ao_evaluation.py  through_tissue.py
adaptive_optics_computation/: image_metrics.py
light_sheet_microscopy/: line_scanning_simulation.py
misc/: galvo_scanning_sim.py  hologram_generation.py  image_analyzer.py
polarization_anistropy/: anistropy_calculation.py  background_substraction.py  dualview_register.py  line_mask.py  polarization_camera_simulator.py
resolft_microscopy/: parallel_resolft_reconstruction.py  point_scan_resolft_simulation.py  resolft_aberration_kinetics.py  resolft_kinetics_analyzer.py
structured_illumination_microscopy/: nlsim2d_final_image.tif  nlsim_compss.py  nlsim_simulation.py  (+5 more)
