[project]
name = "imcomsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numexpr>=2.14.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyfftw>=0.15.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "scipy-stubs>=1.17.1.3",
    "tifffile>=2026.3.3",
]
